--- a/css/style.css
+++ b/css/style.css
@@ -106,11 +106,17 @@ button {
 /*================ $HEADER STYLE ===============*/
 
 .header {
-  position: absolute;
+  position: fixed;
   top: 0;
   left: 0;
 
   width: 100%;
+  z-index: 1;
+  transition: all .4s;
+}
+
+.header.js-scroll {
+  background: var(--color-black);
 }
 
 .header-container {
@@ -284,6 +290,46 @@ button {
 /*^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^*/
 /*================ $MODELS STYLE ===============*/
 
+.models {
+  overflow: hidden;
+}
+
+.models__card {
+  position: relative;
+}
+
+.models__card-line1 {
+  position: absolute;
+
+  top: 0;
+  left: 107px;
+
+  width: 760px;
+  height: 408px;
+
+  background: linear-gradient(180deg, rgba(191, 144, 108, 0) 0%, rgba(191, 144, 108, 0.4) 40.32%, rgba(191, 144, 108, 0) 100%);
+
+  transform: skewX(-35deg);
+
+  z-index: -1;
+}
+
+.models__card-line2 {
+  position: absolute;
+
+  bottom: 0;
+  left: 100px;
+
+  width: 100%;
+  height: 100%;
+
+  background: linear-gradient(180deg, rgba(191, 144, 108, 0) 0%, rgba(191, 144, 108, 0.4) 40.32%, rgba(191, 144, 108, 0) 100%);
+
+  transform: skewX(-35deg);
+
+  z-index: -1;
+}
+
 .models__upper {
   padding: 190px 5px 0;
 }
@@ -420,6 +466,10 @@ button {
   border: 1px solid var(--color-gold);
 
   margin-top: 30px;
+
+  position: relative;
+
+  overflow: hidden;
 }
 
 .models__card-list {
@@ -1027,6 +1077,19 @@ button {
 }
 
 /*|*|*|*|*|*|*|*|*|*|*|*|*|*|*|*|*|*|*|*|*|*|*|*/
+
+.filtered-show,
+.showmore-show {
+  display: block;
+  opacity: 1;
+  transition: .3s;
+}
+
+.filtered-hide,
+.showmore-hide {
+  display: none;
+  opacity: 0;
+}
 
 @media screen and (min-width: 430px) {
   .main-banner__time {
