--- a/css/style.css
+++ b/css/style.css
@@ -1,137 +1,153 @@
 @font-face {
-    font-family: 'Gotham Pro';
-    src: local('Gotham Pro Regular'), local('Gotham-Pro-Regular'),
-        url('../fonts/GothamPro.woff2') format('woff2'),
-        url('../fonts/GothamPro.woff') format('woff'),
-        url('../fonts/GothamPro.ttf') format('truetype');
-    font-weight: 400;
-    font-style: normal;
-  }
+  font-family: 'Gotham Pro';
+  src: local('Gotham Pro Regular'), local('Gotham-Pro-Regular'),
+    url('../fonts/GothamPro.woff2') format('woff2'),
+    url('../fonts/GothamPro.woff') format('woff'),
+    url('../fonts/GothamPro.ttf') format('truetype');
+  font-weight: 400;
+  font-style: normal;
+}
 
-  @font-face {
-    font-family: 'Gotham Pro';
-    src: local('Gotham Pro Bold'), local('Gotham-Pro-Bold'),
-        url('../fonts/GothamPro-Bold.woff2') format('woff2'),
-        url('../fonts/GothamPro-Bold.woff') format('woff'),
-        url('../fonts/GothamPro-Bold.ttf') format('truetype');
-    font-weight: 700;
-    font-style: normal;
-  }
+@font-face {
+  font-family: 'Gotham Pro';
+  src: local('Gotham Pro Bold'), local('Gotham-Pro-Bold'),
+    url('../fonts/GothamPro-Bold.woff2') format('woff2'),
+    url('../fonts/GothamPro-Bold.woff') format('woff'),
+    url('../fonts/GothamPro-Bold.ttf') format('truetype');
+  font-weight: 700;
+  font-style: normal;
+}
 
-  @font-face {
-    font-family: 'AGRESSIVE';
-    src: local('AGRESSIVE'), local('AGRESSIVE'),
-        url('../fonts/AGRESSIVE.woff2') format('woff2'),
-        url('../fonts/AGRESSIVE.woff') format('woff'),
-        url('../fonts/AGRESSIVE.ttf') format('truetype');
-    font-weight: 700;
-    font-style: italic;
-  }
+@font-face {
+  font-family: 'Oks Free';
+  src: local('Oks Free'), local('Oks-Free'),
+    url('../fonts/oks_free.woff2') format('woff2'),
+    url('../fonts/oks_free.woff') format('woff'),
+    url('../fonts/oks_free.ttf') format('truetype');
+  font-weight: 400;
+  font-style: normal;
+}
 
- 
- :root {
-    --family-gotham: 'Gotham Pro';
-    --family-agressive: 'AGRESSIVE';
-    --color-gold: #BF906C;
-    --color-black: #191B1D;
-    --color-white: #FFFFFF;
- }
-
-  body {
-    font-family: 'Gotham Pro';
-    font-style: normal;
-
-    background: var(--color-black);
-  }
-
-  button {
-    cursor: pointer;
-  }
-
-  /*^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^*/
-  /*^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^*/
-  /*================ $SECTION STYLE ===============*/
-
-  .btn {
-    width: 100%;
-
-    display: flex;
-    align-items: center;
-    justify-content: center;
-  }
-  .btn.bg_gold_color {
-    background: var(--color-gold);
-
-    color: var(--color-white);
-  }
-  .btn.bg_white_color {
-    background: var(--color-white);
-
-    color: var(--color-black);
-  }
-
-  .section__title {
-    font-family: var(--family-agressive);
-    font-style: italic;
-    font-weight: 700;
-    font-size: 37px;
-    line-height: 43px;
-    text-transform: uppercase;
-    background: linear-gradient(180deg, rgba(191, 144, 108, 0.4) 0%, rgba(191, 144, 108, 0) 100%);
-    -webkit-background-clip: text;
-    -webkit-text-fill-color: transparent;
-    background-clip: text;
-    text-fill-color: transparent;
-  }
-  .section__title.align_left {
-    text-align: left;
-  }
-  .section__title.align_right {
-    text-align: right;
-  }
-
-  .container {
-    padding: 0 16px;
-    margin: 0 auto;
-  }
-
-  /*|*|*|*|*|*|*|*|*|*|*|*|*|*|*|*|*|*|*|*|*|*|*|*/
+@font-face {
+  font-family: 'Century Gothic';
+  src: local('Century Gothic Regular'), local('Century-Gothic-Regular'),
+    url('../fonts/CenturyGothic.woff2') format('woff2'),
+    url('../fonts/CenturyGothic.woff') format('woff'),
+    url('../fonts/CenturyGothic.ttf') format('truetype');
+  font-weight: 400;
+  font-style: normal;
+}
 
 
-   /*^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^*/
-  /*^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^*/
-  /*================ $HEADER STYLE ===============*/
+:root {
+  --family-gotham: 'Oks Free';
+  --family-oks: 'Oks Free';
+  --family-gothic: 'Century Gothic';
+  --color-gold: #BF906C;
+  --color-black: #191B1D;
+  --color-gray: #31363A;
+  --color-white: #FFFFFF;
+}
 
-  .header-container {
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
+body {
+  font-family: 'Gotham Pro';
+  font-style: normal;
 
-    padding: 14px 0;
-  }
+  background: var(--color-black);
+}
 
-  .header-btn.mob_hide {
-    display: none;
-  }
+button {
+  cursor: pointer;
+}
 
-  .header__img {
-    max-width: 124px;
-  }
+/*^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^*/
+/*^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^*/
+/*================ $SECTION STYLE ===============*/
 
-  .header-info {
-    display: flex;
-    flex-direction: column;
-    gap: 5px;
-  }
+.btn {
+  width: 100%;
 
-  .header-info__text {
-    font-weight: 400;
-    font-size: 10px;
-    line-height: 10px;
-    text-decoration: none;
-    color: var(--color-white);
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
 
-    text-align: right;
-  }
+.btn.bg_gold_color {
+  background: var(--color-gold);
 
-  /*|*|*|*|*|*|*|*|*|*|*|*|*|*|*|*|*|*|*|*|*|*|*|*/
+  color: var(--color-white);
+}
+
+.btn.bg_white_color {
+  background: var(--color-white);
+
+  color: var(--color-black);
+}
+
+.section__title {
+  font-family: var(--family-agressive);
+  font-style: italic;
+  font-weight: 700;
+  font-size: 37px;
+  line-height: 43px;
+  text-transform: uppercase;
+  background: linear-gradient(180deg, rgba(191, 144, 108, 0.4) 0%, rgba(191, 144, 108, 0) 100%);
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+  background-clip: text;
+  text-fill-color: transparent;
+}
+
+.section__title.align_left {
+  text-align: left;
+}
+
+.section__title.align_right {
+  text-align: right;
+}
+
+.container {
+  padding: 0 16px;
+  margin: 0 auto;
+}
+
+/*|*|*|*|*|*|*|*|*|*|*|*|*|*|*|*|*|*|*|*|*|*|*|*/
+
+
+/*^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^*/
+/*^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^*/
+/*================ $HEADER STYLE ===============*/
+
+.header-container {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+
+  padding: 14px 0;
+}
+
+.header-btn.mob_hide {
+  display: none;
+}
+
+.header__img {
+  max-width: 124px;
+}
+
+.header-info {
+  display: flex;
+  flex-direction: column;
+  gap: 5px;
+}
+
+.header-info__text {
+  font-weight: 400;
+  font-size: 10px;
+  line-height: 10px;
+  text-decoration: none;
+  color: var(--color-white);
+
+  text-align: right;
+}
+
+/*|*|*|*|*|*|*|*|*|*|*|*|*|*|*|*|*|*|*|*|*|*|*|*/
