--- a/css/style.css
+++ b/css/style.css
@@ -118,7 +118,7 @@ button {
 /*^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^*/
 /*================ $HEADER STYLE ===============*/
 
-.header-container {
+.header__container {
   display: flex;
   align-items: center;
   justify-content: space-between;
@@ -126,13 +126,6 @@ button {
   padding: 14px 0;
 }
 
-.header-btn.mob_hide {
-  display: none;
-}
-
-.header__img {
-  max-width: 124px;
-}
 
 .header-info {
   display: flex;
